# napalm-jtcom

./: .gitignore  LICENSE  README.md  pyproject.toml
ansible/: ansible.cfg  inventory.ini  test_playbook.yml
ansible/action_plugins/: jtcom_config.py
ansible/host_vars/: localhost.yml
bronweg/cgiswitch/: README.md  galaxy.yml
bronweg/cgiswitch/examples/: port_patch.yml  vlan_create.yml  vlan_delete.yml
docs/: DEVELOPMENT.md
examples/: apply_device_config.py  apply_vlan.py  get_facts.py  get_interfaces.py  get_vlans.py  toggle_port_admin.py
galaxy/bronweg/cgiswitch/: README.md
refactor/: step1.fix1.diff  step1.fix1.txt  step1.fix2.diff  step1.fix2.txt  step1.fix3.diff  step1.fix3.txt  step1.txt  step1_sum.txt  step2.fix1.diff  step2.fix1.txt  step2.fix2.txt  step2.fix2_sum.txt  step2.txt  step2_sum.txt  step3.txt  step3_sum.txt  step4.diff  step4.fix1.diff  step4.fix1.txt  step4.fix2.diff  step4.fix2.txt  step4.txt  step5a.diff  step5a.fix1.diff  step5a.fix1.txt  step5a.txt  step5b.diff  step5b.fix1.diff  step5b.fix1.txt  step5b.txt  step5c.diff  step5c.fix1.diff  step5c.fix1.txt  step5c.txt  step5d.diff  step5d.txt  unify-port-numbering-1-based.txt
src/napalm_jtcom/: __init__.py  driver.py
src/napalm_jtcom/client/: __init__.py  errors.py  http.py  port_ops.py  session.py  vlan_ops.py
src/napalm_jtcom/model/: __init__.py  config.py  device.py  port.py  trunk.py  vlan.py
src/napalm_jtcom/parser/: __init__.py  device.py  (+4 more)
tests/: test_vlan_membership_model.py
tests/fixtures/: README.md  device_info.html  port_settings.html  port_stats.html  trunk_group.html  trunk_lacp.html  vlan_port_based.html  vlan_static.html
tests/unit/: test_canonical_membership_model.py  test_device_plan.py  test_normalize.py  test_parser_device.py  test_parser_port.py  test_parser_trunk.py  test_parser_vlan.py  test_port_diff.py  test_port_post_payloads.py  test_port_vlan_input.py  test_session.py  test_vlan_diff.py  test_vlan_membership_apply.py  test_vlan_post_payloads.py
(+17 files in other folders)
